--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/himitu-da/dtp-for-wordbooks#readme",
   "dependencies": {
+    "html-webpack-plugin": "^5.6.4",
     "puppeteer": "^24.30.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
